# tiny_debugger

./: CMakeLists.txt  README.md  main.c
example/: main  main.c
src/debugger/: dbg_driver.c  debugger_core.c  debugger_driver.c
src/debugger/core/: dbg_continue_child.c  dbg_core.c  dbg_exit.c  dbg_regs.c  dbg_step.c
src/debugger/include/: dbg_continue_child.h  dbg_core.h  dbg_driver.h  dbg_exit.h  dbg_regs.h  dbg_step.h  debugger_core.h  debugger_driver.h  regs_t.h
src/include/: ANSI_colors.h  config.h
src/ui/: ui_driver.c
src/ui/REPL/: dispatcher.c  repl_dispatcher.c  repl_driver.c  repl_help_command.c  repl_regs.c  repl_split_command.c
src/ui/REPL/include/: dispatcher.h  reg_t.h  repl_dispatcher.h  repl_driver.h  repl_help_command.h  repl_regs.h  repl_split_command.h
src/ui/cli/: commands.c  ui_cli.c
src/ui/include/: args_t.h  cli.h  ui_cli.h  ui_driver.h
src/utils/: logger.c
src/utils/include/: dbg_err.h  exit_program.h  logger.h
